me olvide de comitiar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ Es el director técnico más ganador de la historia de Rivern. 1​ y uno de los
     <section class="productos">
 agsdfgsdgf
 
+            ergherjkhgrkj
+
 
     </section>
     <section class="staff">STAFF</section>
