--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
     </section>
     <div class="linea"></div>
     <section class="descripcion">
-      <div class="river"> <p>​Marcelo Daniel Gallardo (Merlo, 18 de enero de 1976) es un exfutbolista y entrenador argentino. Actualmente dirige al Al-Ittihad de la Liga Profesional Saudí.
-Es el director técnico más ganador de la historia de Rivern. 1​ y uno de los argentinos más ganadores.n. 2​3​ Ganó dos ediciones de la Copa Libertadores, tres de la Recopa, una de la Copa Sudamericana, una de la Copa Suruga Bank, tres de la Copa Argentina, dos de la Supercopa Argentina y una liga.4​ Además, sumando títulos como jugador y técnico, comparte el récord con Ángel Labruna de ser el futbolista más campeón de la historia del «millonario» con 22 títulos</p></div>
-        <div class="river"><img src="img/foto2.jpg" width="500" height="350px"></div>
+      <div class=""> <p>marcelo Daniel Gallardo (Merlo, 18 de enero de 1976) es un exfutbolista y entrenador argentino. Actualmente dirige al Al-Ittihad de la Liga Profesional Saudí.</p>
+      <p>tambien Gallardo fue el tecnico mas ganador en la historia de river plate</p>
+        <p>En total, Marcelo Gallardo conquistó ¡14 títulos! en River entre competencias locales e internacionales, donde destacadas dos Copa Libertadores en 2015 y 2018.</p></div>
+        <div class="river"><img src="img/foto2.jpg" width="auto" height="auto"></div>
+        <!-- <div class="river1"><img src="img/foto4.jpg " width="auto" height="auto"></div> -->
     </section>
     <div class="linea2"></div>
     <section class="productos">
-agsdfgsdgf
+      <div class="">estos son los trofeos que gano Marcelo gallador en river</div>
+      <div class="river1"><img src="img/foto3.jpg" width="400" height="auto"></div>
+      <div class="river2"><img src="img/foto4.jpg " width="400" height="auto"></div>
 
         
 
 
     </section>
-    <section class="staff">STAFF</section>
+    <section class="staff">PAGINA DISEÑA POR SANCHEZ TEO</section>
     <footer>
       
     </footer>
