--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     </section>
     <div class="linea"></div>
     <section class="descripcion">
-      <div class=""> <p>marcelo Daniel Gallardo (Merlo, 18 de enero de 1976) es un exfutbolista y entrenador argentino. Actualmente dirige al Al-Ittihad de la Liga Profesional Saudí.</p>
-      <p>tambien Gallardo fue el tecnico mas ganador en la historia de river plate</p>
-        <p>En total, Marcelo Gallardo conquistó ¡14 títulos! en River entre competencias locales e internacionales, donde destacadas dos Copa Libertadores en 2015 y 2018.</p></div>
-        <div class="river"><img src="img/foto2.jpg" width="auto" height="auto"></div>
-        <!-- <div class="river1"><img src="img/foto4.jpg " width="auto" height="auto"></div> -->
+      <div class="">
+        <p>marcelo Daniel Gallardo (Merlo, 18 de enero de 1976) es un exfutbolista y entrenador argentino. Actualmente
+          dirige al Al-Ittihad de la Liga Profesional Saudí.</p>
+        <p>tambien Gallardo fue el tecnico mas ganador en la historia de river plate</p>
+        <p>En total, Marcelo Gallardo conquistó ¡14 títulos! en River entre competencias locales e internacionales,
+          donde destacadas dos Copa Libertadores en 2015 y 2018.</p>
+      </div>
+      <div class="river"><img src="img/foto2.jpg" width="auto" height="auto"></div>
+      <!-- <div class="river1"><img src="img/foto4.jpg " width="auto" height="auto"></div> -->
     </section>
     <div class="linea2"></div>
     <section class="productos">
@@ -32,13 +36,13 @@
       <div class="river1"><img src="img/foto3.jpg" width="400" height="auto"></div>
       <div class="river2"><img src="img/foto4.jpg " width="400" height="auto"></div>
 
-        
+
 
 
     </section>
     <section class="staff">PAGINA DISEÑA POR SANCHEZ TEO</section>
     <footer>
-      
+
     </footer>
   </div>
 
