--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header> <b>Marcelo Gallardo</b></header>
 
     <section class="banner">
-      <div><img src="img/foto1.jpg" width="100%" height="400px"></div>
+      <div class="imagen-fondo"><img src="img/foto1.jpg" width="100%" height="400px"></div>
     </section>
     <div class="linea"></div>
     <section class="descripcion">
