--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
     <section class="productos">
       <div class="river1"><img src="img/foto3.jpg" width="400" height="auto"></div>
 
+      <section class="productos2">
+        <div>
+                  
+        </div>
 
-    </section>
+      </section>  
+
+
+    <!-- </section>
     <section class="staff">PAGINA DISEÑA POR SANCHEZ TEO</section>
-    <footer>
+    <footer> -->
 
     </footer>
   </div>
