--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="img-productos"></div>
           <div class="descricion-prod"></div>
             <h5>trofeos</h5>
-            <p>gallardo makina</p>
+            <p>gallardo makina dsads</p>
             <button class="btn">ver mas</button>
 
         </div>
