--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
           <div class="productos">
-          <div class="img-productos"><img src="img/foto4.jpg" height="50%"></div>
+          <div class="img-productos"></div>
           <div class="descricion-prod"></div>
             <h5>trofeos</h5>
             <p>gallardo makina dsads</p>
