--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
           <div class="productos">
           <div class="img-productos"></div>
+          <div class="img-productos1"></div>
+          <div class="img-productos2"></div>
           <div class="descricion-prod"></div>
             <h5>trofeos</h5>
             <p>gallardo makina dsads</p>
